novas entradas e algumas correcoes

--- a/counterpoint.bib
+++ b/counterpoint.bib
@@ -7,6 +7,16 @@
   address       = {Paris}
 }
 
+@InCollection{    bloxam02:cantus,
+  author        = {M. Jennifer Bloxam},
+  title         = {Cantus Firmus},
+  booktitle     = {Grove Music},
+  publisher     = {Oxford University Press},
+  year          = {2002},
+  editor        = {Laura Williams Macy},
+  annote        = {Disponível em \url{http://www.grovemusic.com/}}
+}
+
 @Book{            carvalho06:contraponto,
   title         = {Contraponto Modal: manual prático},
   publisher     = {Evangraf},
@@ -35,4 +45,14 @@
   author        = {Walter Piston},
   address       = {London},
   pdf           = {/shared/books/piston:counterpoint.pdf}
+}
+
+@InCollection{    sachs.ea02:counterpoint,
+  author        = {Klaus-Jürgen Sachs and Carl Dahlhaus},
+  title         = {Counterpoint},
+  booktitle     = {Grove Music},
+  publisher     = {Oxford University Press},
+  year          = 2002,
+  editor        = {Laura Williams Macy},
+  annote        = {Disponível em \url{http://www.grovemusic.com/}}
 }
