--- a/ismir.bib
+++ b/ismir.bib
@@ -1,20 +1,4 @@
 
-@InProceedings{   07:localized,
-  author        = {İzmirli, Özgür},
-  title         = {Localized Key Finding from Audio Using Nonnegative Matrix
-                  Factorization for Segmentation},
-  booktitle     = proc-ismir2007,
-  pages         = {195-200},
-  url           = {proceedings/ISMIR2007_p195_izmirli.pdf},
-  year          = {2007},
-  editor        = {Simon Dixon and David Bainbridge and Rainer Typke},
-  address       = {Vienna, Austria},
-  month         = {September},
-  publisher     = {Österreichische Computer Gesellschaft},
-  isbn          = {978-3-85403-218},
-  file          = {2007/proceedings/ISMIR2007_p195_izmirli.pdf}
-}
-
 @InProceedings{   abdallah.ea05:theory,
   author        = {Samer Abdallah and Katy Noland and Mark Sandler and
                   Michael Casey and Christophe Rhodes},
@@ -1203,21 +1187,6 @@
   file          = {2006/PAPERS/ISMIR06177_Paper.pdf}
 }
 
-@InProceedings{   celma.ea07:music,
-  author        = {Celma, Òscar and Lamere, Paul},
-  title         = {Music Recommendation},
-  booktitle     = proc-ismir2007,
-  pages         = {},
-  url           = {},
-  year          = {2007},
-  editor        = {Simon Dixon and David Bainbridge and Rainer Typke},
-  address       = {Vienna, Austria},
-  month         = {September},
-  publisher     = {Österreichische Computer Gesellschaft},
-  isbn          = {978-3-85403-218},
-  file          = {2007/}
-}
-
 @InProceedings{   celma04:architecture,
   author        = {Oscar Celma},
   title         = {Architecture for an MPEG-7 Web Browser},
@@ -1262,6 +1231,21 @@
   publisher     = {University of London},
   isbn          = {0-9551179-0-9},
   file          = {2005/proceedings/3119.pdf}
+}
+
+@InProceedings{   celma.ea07:music,
+  author        = {Celma, Òscar and Lamere, Paul},
+  title         = {Music Recommendation},
+  booktitle     = proc-ismir2007,
+  pages         = {},
+  url           = {},
+  year          = {2007},
+  editor        = {Simon Dixon and David Bainbridge and Rainer Typke},
+  address       = {Vienna, Austria},
+  month         = {September},
+  publisher     = {Österreichische Computer Gesellschaft},
+  isbn          = {978-3-85403-218},
+  file          = {2007/}
 }
 
 @InProceedings{   cemgil06:bayesian,
@@ -4119,21 +4103,6 @@
   file          = {2006/PAPERS/ISMIR0670_Paper.pdf}
 }
 
-@InProceedings{   izmirli06:audio,
-  author        = {Özgür Izmirli},
-  title         = {Audio Key Finding using Low-Dimensional Spaces},
-  booktitle     = proc-ismir2006,
-  pages         = {127-132},
-  url           = {PAPERS/ISMIR06165_Paper.pdf},
-  year          = {2006},
-  editor        = {Kjell Lemström and Adam Tindale and Roger Dannenberg},
-  address       = {Victoria, Canada},
-  month         = {October},
-  publisher     = {University of Victoria},
-  isbn          = {1-55058-349-2},
-  file          = {2006/PAPERS/ISMIR06165_Paper.pdf}
-}
-
 @InProceedings{   izmirli00:using,
   author        = {Ozgur Izmirli},
   title         = {Using a Spectral Flatness Based Feature for Audio
@@ -4164,6 +4133,21 @@
   publisher     = {University of London},
   isbn          = {0-9551179-0-9},
   file          = {2005/proceedings/1110.pdf}
+}
+
+@InProceedings{   izmirli06:audio,
+  author        = {Özgür Izmirli},
+  title         = {Audio Key Finding using Low-Dimensional Spaces},
+  booktitle     = proc-ismir2006,
+  pages         = {127-132},
+  url           = {PAPERS/ISMIR06165_Paper.pdf},
+  year          = {2006},
+  editor        = {Kjell Lemström and Adam Tindale and Roger Dannenberg},
+  address       = {Victoria, Canada},
+  month         = {October},
+  publisher     = {University of Victoria},
+  isbn          = {1-55058-349-2},
+  file          = {2006/PAPERS/ISMIR06165_Paper.pdf}
 }
 
 @InProceedings{   jacobson06:multifaceted,
@@ -10334,4 +10318,20 @@
   publisher     = {Universitat Pompeu Fabra},
   isbn          = {84-88042-44-2},
   file          = {2004/proceedings/p087-page-478-paper243.pdf}
+}
+
+@InProceedings{   İzmirli07:localized,
+  author        = {İzmirli, Özgür},
+  title         = {Localized Key Finding from Audio Using Nonnegative Matrix
+                  Factorization for Segmentation},
+  booktitle     = proc-ismir2007,
+  pages         = {195-200},
+  url           = {proceedings/ISMIR2007_p195_izmirli.pdf},
+  year          = {2007},
+  editor        = {Simon Dixon and David Bainbridge and Rainer Typke},
+  address       = {Vienna, Austria},
+  month         = {September},
+  publisher     = {Österreichische Computer Gesellschaft},
+  isbn          = {978-3-85403-218},
+  file          = {2007/proceedings/ISMIR2007_p195_izmirli.pdf}
 }
