--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -212,6 +212,15 @@
   pages         = {96--120}
 }
 
+@Article{         lidov.ea73:melody,
+  author        = {David Lidov and Jim Gabura},
+  title         = {A Melody Writing Algorithm Using a Formal Language Model},
+  journal       = {Computers in the Humanities},
+  year          = {1973},
+  volume        = {3--4},
+  pages         = {138-48}
+}
+
 @MastersThesis{   lindsay96:using,
   author        = {Adam Taro Lindsay},
   title         = {Using contour as a mid-level representation of melody},
