--- a/music-history.bib
+++ b/music-history.bib
@@ -72,10 +72,7 @@
   series        = {Norton History of Music},
   address       = {New York},
   annote        = {[by] William W. Austin. illus., music, ports. 24 cm.},
-  cdd           = {780.904 A938m},
-  keywords      = {Music 20th century History and criticism.},
-  owner         = {marcos},
-  timestamp     = {2008.03.15}
+  cdd           = {780.904 A938m}
 }
 
 @Book{            azevedo56:150,
@@ -545,9 +542,9 @@
                   cm.}
 }
 
-@Book{            mello08:a-música-no-brasil-desde-os-tempos-coloniaes-até-o-primeiro-decênio-da-república,
-  title         = {{A música no Brasil desde os tempos coloniaes até o
-                  primeiro decênio da República}},
+@Book{            mello08:música,
+  title         = {A música no Brasil desde os tempos coloniaes até o
+                  primeiro decênio da República},
   author        = {{Guilherme Teodoro Preira de} Mello},
   year          = {1908},
   publisher     = {Typographia de S. Joaquim},
@@ -917,6 +914,14 @@
   cdd           = {780.9 N532 v9}
 }
 
+@Book{            christensen02:cambridge,
+  title         = {The Cambridge History of Western Music Theory},
+  editor        = {Thomas Street Christensen},
+  year          = {2002},
+  publisher     = {Cambridge University Press},
+  address       = {Cambridge}
+}
+
 @Book{            cooper74:modern,
   title         = {The modern age, 1890-1960},
   publisher     = {Oxford University Press},
@@ -947,8 +952,7 @@
   year          = {1960},
   editor        = {Hughes, Anselm and Abraham, Gerald},
   series        = {The New Oxford History of Music},
-  address       = {London, New York},
-  keywords      = {Music 500-1400.}
+  address       = {London, New York}
 }
 
 @Book{            hughes.ea69:ars,
