--- a/orchestration.bib
+++ b/orchestration.bib
@@ -152,7 +152,7 @@
   booktitle     = {Grove Music},
   publisher     = {Oxford University Press},
   year          = {2002},
-  editor        = {Macy, Laura Williams},
+  editor        = {Laura Williams Macy},
   url           = {/shared/docs/grove/files-1/music.20404.html}
 }
 
