--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -14,6 +14,17 @@
   address       = {San Diego}
 }
 
+@Article{         archibald72:some,
+  author        = {Bruce Archibald},
+  title         = {Some Thoughts on Symmetry in Early Webern: Op. 5, No. 2},
+  journal       = {Perspectives of New Music},
+  year          = 1972,
+  volume        = 10,
+  number        = 2,
+  pages         = {159--163},
+  doi           = {10.2307/832341}
+}
+
 @Article{         babbitt61:set,
   author        = {Milton Babbitt},
   title         = {Set Structure as a Compositional Determinant},
@@ -131,6 +142,17 @@
   year          = {1979},
   author        = {Douglass M. Green},
   address       = {New York}
+}
+
+@Article{         kabbash84:aggregate-derived,
+  author        = {Paul Kabbash},
+  title         = {Aggregate-Derived Symmetry in Webern's "Early Works"},
+  journal       = {Journal of Music Theory},
+  year          = 1984,
+  volume        = 28,
+  number        = 2,
+  pages         = {225--250},
+  doi           = {10.2307/843533}
 }
 
 @Book{            koechlin46:traité,
