--- a/music-history.bib
+++ b/music-history.bib
@@ -551,6 +551,14 @@
   address       = {Bahia}
 }
 
+@Book{            moldenhauer.ea78:anton,
+  author        = {Hans Moldenhauer and Rosaleen Moldenhauer},
+  title         = {Anton Von Webern, a Chronicle of His Life and Work},
+  publisher     = {Alfred A. Knopf},
+  year          = 1978,
+  address       = {New York}
+}
+
 @Book{            morgan91:twentieth-century,
   title         = {Twentieth-century music: a history of musical style in
                   modern Europe and America},
