partitura webern op.5

--- a/music-scores.bib
+++ b/music-scores.bib
@@ -39,3 +39,12 @@
   year          = {1970},
   author        = {{Ludwig van} Beethoven}
 }
+
+@Book{            webern92:funf,
+  author        = {Anton Webern},
+  title         = {Fünf Sätze für Streichquartett},
+  publisher     = {Philharmonia Partituren in der Universal Edition},
+  year          = 1992,
+  number        = 358,
+  address       = {Wien}
+}
