--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -141,6 +141,17 @@
   timestamp     = {2007.05.25}
 }
 
+@Article{         forte02:olivier,
+  author        = {Allen Forte},
+  title         = {Olivier Messiaen as Serialist},
+  journal       = {Music Analysis},
+  year          = 2002,
+  volume        = 21,
+  number        = 1,
+  pages         = {3--34},
+  doi           = {10.1111/1468-2249.00148}
+}
+
 @Article{         friedmann87:response,
   author        = {Michael L. Friedmann},
   title         = {A Response: My Contour, Their Contour},
