--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -1,4 +1,16 @@
 
+@Article{         agawu04:how,
+  author        = {Kofi Agawu},
+  title         = {How We Got Out of Analysis, and How to Get Back},
+  journal       = {Music Analysis},
+  year          = 2004,
+  volume        = 23,
+  number        = {2--3},
+  pages         = {267--286},
+  doi           = {10.1111/j.0262-5245.2004.00204.x},
+  file          = {agawu04:how.pdf}
+}
+
 @Book{            bent.ea87:analysis,
   title         = {Analysis},
   publisher     = {Norton},
