novas entradas e correção

--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -53,6 +53,14 @@
   address       = {Aldershot}
 }
 
+@Book{            epstein79:beyond,
+  author        = {David Epstein},
+  title         = {Beyond Orpheus: studies in musical structure},
+  publisher     = {MIT Press},
+  year          = 1979,
+  address       = {Cambridge, Mass}
+}
+
 @Book{            howat83:debussy,
   title         = {Debussy in Proportion: A musical analysis},
   publisher     = {Cambridge University Press},
