--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -213,7 +213,7 @@
 }
 
 @Book{            lerdahl.ea83:generative,
-  author        = {Lerdahl, F. and R. Jackendoff},
+  author        = {Fred Lerdahl and Ray Jackendoff},
   title         = {A Generative Theory of Tonal Music},
   publisher     = {MIT Press},
   year          = 1983,
@@ -253,6 +253,14 @@
   publisher     = {Longman},
   year          = {1980},
   author        = {Rahn, J.}
+}
+
+@Book{            réti51:tematic,
+  author        = {Rudolph Réti},
+  title         = {The tematic Process in music},
+  publisher     = {MacMillan},
+  year          = 1951,
+  address       = {New York}
 }
 
 @Book{            straus90:introduction,
