novas entradas e correção de nome de autor

--- a/music-perception.bib
+++ b/music-perception.bib
@@ -1,7 +1,26 @@
 
+@Article{         dowling.ea71:contour,
+  author        = {W. Jay Dowling and Diane S. Fujitani},
+  title         = {Contour, interval and pitch recognition in memory for
+                  melodies},
+  journal       = {Journal of Acoustic Society of America},
+  year          = 1971,
+  volume        = 49,
+  pages         = {524--531}
+}
+
 @Book{            dowling.ea86:music,
   title         = {Music Cognition},
   publisher     = {Academic Press},
   year          = {1986},
-  author        = {W. Jay Dowling and D.L. Harwood}
+  author        = {W. Jay Dowling and Dane L. Harwood}
+}
+
+@Article{         white60:recognition,
+  author        = {Benjamin W. White},
+  title         = {Recognition of distorted melodies},
+  journal       = {American Journal of Psychology},
+  year          = 1960,
+  volume        = 73,
+  pages         = {100--107}
 }
