Correção em nomes dos arquivos pdf

--- a/counterpoint.bib
+++ b/counterpoint.bib
@@ -44,7 +44,7 @@
   year          = {1970},
   author        = {Walter Piston},
   address       = {London},
-  pdf           = {/shared/books/piston:counterpoint.pdf}
+  file          = {piston70:counterpoint.pdf}
 }
 
 @InCollection{    sachs.ea02:counterpoint,
