--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -95,7 +95,7 @@
   citeseerurl   = {http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=277
                   http://www.ufba.br/tedesimples/tde_busca/arquivo.php?codArquivo=278}
                   ,
-  pdf           = {/home/marcos/backup/exclude-backup/docs/teses/bordini03-1.pdf}
+  file          = {bordini03:teoria-a.pdf}
                   
 }
 
@@ -245,7 +245,7 @@
   year          = {1959},
   author        = {Walter Piston},
   address       = {London},
-  pdf           = {/shared/books/piston:harmony.pdf}
+  file          = {piston59:harmony.pdf}
 }
 
 @Book{            rahn80:basic,
