--- a/music-history.bib
+++ b/music-history.bib
@@ -82,7 +82,7 @@
   author        = {{Luiz Heitor Corrêa de} Azevedo},
   address       = {Rio de Janeiro},
   owner         = {marcos},
-  pdf           = {/shared/books/azevedo:150.pdf}
+  file          = {azevedo:150.pdf}
 }
 
 @Book{            bourdelot.ea66:histoire,
@@ -377,7 +377,7 @@
   author        = {Donald Grout and Claude Palisca},
   address       = {Lisboa},
   annote        = {Trad. Ana Luísa Faria},
-  pdf           = {/shared/books/grout.ea:historia.pdf}
+  file          = {grout.ea94:historia.pdf}
 }
 
 @Book{            grout.ea80:history,
@@ -511,7 +511,7 @@
   edition       = {4 ed.},
   cdd           = {780.981 M343},
   isbn          = {85-209-1050-5},
-  pdf           = {/shared/books/mariz:historia*1.pdf}
+  file          = {mariz94:historia.pdf}
 }
 
 @Book{            martini57:storia,
