--- a/orchestration.bib
+++ b/orchestration.bib
@@ -162,7 +162,7 @@
   year          = {1955},
   author        = {Walter Piston},
   address       = {New York},
-  pdf           = {/shared/books/piston:orchestration.pdf}
+  file          = {piston55:orchestration.pdf}
 }
 
 @Book{            rauscher63:orchestration,
