--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -10,7 +10,7 @@
   annote        = {http://links.jstor.org/sici?sici=0014-1836(197605)20%3A2%3C179%3AMCT%3E2.0.CO%3B2-E}
                   ,
   doi           = {10.2307/851015},
-  pdf           = {/shared/docs/jstor/adams:melodic.pdf},
+  file          = {adams76:melodic.pdf},
   publisher     = {JSTOR}
 }
 
@@ -55,7 +55,7 @@
                   linear regression model and these results was made.},
   annote        = {http://etd.lib.fsu.edu/theses/available/etd-10302003-012714/unrestricted/01RDBDissertation.pdf}
                   ,
-  pdf           = {/shared/docs/teses/beard2003cmm.pdf}
+  file          = {beard03:contour.pdf}
 }
 
 @PhDThesis{       clifford95:contour,
@@ -163,7 +163,7 @@
   annote        = {http://links.jstor.org/sici?sici=0022-2909(198723)31%3A2%3C268%3AARMCTC%3E2.0.CO%3B2-8}
                   ,
   doi           = {10.2307/843710},
-  pdf           = {/shared/docs/jstor/friedmann:contour.pdf},
+  file          = {friedmann87:contour.pdf},
   publisher     = {JSTOR}
 }
 
@@ -179,7 +179,7 @@
   annote        = {http://links.jstor.org/sici?sici=0022-2909(198523)29%3A2%3C223%3AAMFTDO%3E2.0.CO%3B2-E}
                   ,
   doi           = {10.2307/843614},
-  pdf           = {/shared/docs/jstor/friedmann:methodology.pdf}
+  file          = {friedmann85:methodology.pdf}
 }
 
 @Article{         hanninen01:orientations,
@@ -191,7 +191,7 @@
   volume        = 45,
   number        = 2,
   pages         = {345-433},
-  file          = {/shared/docs/jstor/hanninen01:orientations}
+  file          = {hanninen01:orientations}
 }
 
 @PhDThesis{       ishiyama96:application,
@@ -253,7 +253,7 @@
   annote        = {http://citeseer.ist.psu.edu/rd/0%2C333574%2C1%2C0.25%2CDownload/http://citeseer.ist.psu.edu/cache/papers/cs/16320/http:zSzzSzsound.media.mit.eduzSz%7EalindsayzSzThesis.pdf/lindsay96using.pdf}
                   ,
   citeseerurl   = {http://citeseer.ist.psu.edu/lindsay96using.html},
-  pdf           = {/home/marcos/profissional/docs/shared-docs/teses/lindsay1996ucm.pdf}
+  file          = {lindsay96:using.pdf}
                   
 }
 
@@ -288,7 +288,7 @@
   annote        = {http://links.jstor.org/sici?sici=0022-2909(198723)31%3A2%3C225%3ARMCEOA%3E2.0.CO%3B2-%23}
                   ,
   doi           = {10.2307/843709},
-  pdf           = {/shared/docs/jstor/marvin.ea:relating.pdf}
+  file          = {marvin.ea87:relating.pdf}
 }
 
 @Article{         morris93:directions,
@@ -328,7 +328,7 @@
                   Polansky.},
   annote        = {http://links.jstor.org/sici?sici=0195-6167(199323)15%3A2%3C205%3ANDITTA%3E2.0.CO%3B2-S}
                   ,
-  pdf           = {/shared/docs/jstor/morris:directions.pdf}
+  file          = {morris93:directions.pdf}
 }
 
 @Article{         morris90:similarity,
@@ -340,7 +340,7 @@
   pages         = {445--60},
   annote        = {http://links.jstor.org/sici?sici=0031-6016(197923%2F198022)18%3A1%2F2%3C445%3AASIFPS%3E2.0.CO%3B2-B}
                   ,
-  pdf           = {/shared/docs/jstor/morris:silimarity.pdf}
+  file          = {morris90:similarity.pdf}
 }
 
 @Book{            morris87:composition,
@@ -367,7 +367,7 @@
   volume        = 48,
   number        = 1,
   pages         = {69--98},
-  file          = {/shared/docs/jstor/pearsall04:transformational.pdf}
+  file          = {pearsall04:transformational.pdf}
 }
 
 @Article{         polansky.ea92:possible,
@@ -400,7 +400,7 @@
   annote        = {http://links.jstor.org/sici?sici=0022-2909(199223)36%3A2%3C259%3APAIMSF%3E2.0.CO%3B2-L}
                   ,
   doi           = {10.2307/843933},
-  pdf           = {/shared/docs/jstor/polansky.ea:possible.pdf}
+  file          = {polansky.ea92:possible.pdf}
 }
 
 @Article{         quinn97:fuzzy,
@@ -421,7 +421,7 @@
                   theories.},
   annote        = {http://links.jstor.org/sici?sici=0195-6167(199723)19%3A2%3C232%3AFETTTO%3E2.0.CO%3B2-W}
                   ,
-  pdf           = {/shared/docs/jstor/quinn:fuzzy.pdf}
+  file          = {quinn97:fuzzy.pdf}
 }
 
 @Article{         roy.ea04:contour-based,
@@ -543,7 +543,7 @@
   annote        = {http://links.jstor.org/sici?sici=0014-1836(196905)13%3A2%3C230%3AOTFAOT%3E2.0.CO%3B2-Z}
                   ,
   doi           = {10.2307/850147},
-  pdf           = {/home/marcos/profissional/docs/shared-docs/jstor/seeger1969fam.pdf}
+  file          = {seeger69:formational.pdf}
                   ,
   publisher     = {JSTOR}
 }
@@ -558,7 +558,7 @@
   number        = {1/3},
   annote        = {http://links.jstor.org/sici?sici=0003-0139(1960)13%3A1%2F3%3C224%3AOTMOAM%3E2.0.CO%3B2-0}
                   ,
-  pdf           = {/home/marcos/profissional/docs/shared-docs/jstor/seeger1960mml.pdf}
+  file          = {seeger60:moods.pdf}
                   ,
   publisher     = {JSTOR}
 }
