add paip, fix accent

--- a/artifical-inteligence.bib
+++ b/artifical-inteligence.bib
@@ -23,3 +23,12 @@
   year          = 2002,
   edition       = {2nd}
 }
+
+@book{norvig92:paradigms,
+ author = {Peter Norvig},
+ title = {Paradigms of Artificial Intelligence Programming: Case Studies in Common Lisp},
+ year = {1992},
+ isbn = {1558601910},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+ }
