--- a/aula-composicao.bib
+++ b/aula-composicao.bib
@@ -26,7 +26,7 @@
   note          = {[Biblioteca da Emus: 785.028 k34]}
 }
 
-@Book{            piston84:orquestración,
+@Book{            piston84:orquestracion,
   author        = {Piston, Walter},
   title         = {Orquestración},
   publisher     = {Real Musical},
@@ -35,7 +35,7 @@
   note          = {[Biblioteca da Emus: 785.021 p6790]}
 }
 
-@Book{            schönberg91:fundamentos,
+@Book{            schonberg91:fundamentos,
   author        = {Schönberg, Arnold},
   title         = {Fundamentos da Composição Musical},
   translator    = {trad. Eduardo Seineman},
