Novo livro: musicologia, de kerman

--- a/music-history.bib
+++ b/music-history.bib
@@ -444,6 +444,15 @@
   address       = {New York}
 }
 
+@Book{            kerman87:musicologia,
+  author        = {Joseph Kerman},
+  title         = {Musicologia},
+  publisher     = {Martins Fontes},
+  year          = 1987,
+  address       = {São Paulo},
+  note          = {Trad. Álvaro Cabral}
+}
+
 @Book{            la-fage44:histoire,
   title         = {Histoire générale de la musique et de la danse},
   publisher     = {Au comptoir des Imprimeurs unis},
