--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -254,7 +254,6 @@
                   ,
   citeseerurl   = {http://citeseer.ist.psu.edu/lindsay96using.html},
   file          = {lindsay96:using.pdf}
-                  
 }
 
 @PhDThesis{       marvin88:generalized,
@@ -543,8 +542,7 @@
   annote        = {http://links.jstor.org/sici?sici=0014-1836(196905)13%3A2%3C230%3AOTFAOT%3E2.0.CO%3B2-Z}
                   ,
   doi           = {10.2307/850147},
-  file          = {seeger69:formational.pdf}
-                  ,
+  file          = {seeger69:formational.pdf},
   publisher     = {JSTOR}
 }
 
@@ -558,8 +556,7 @@
   number        = {1/3},
   annote        = {http://links.jstor.org/sici?sici=0003-0139(1960)13%3A1%2F3%3C224%3AOTMOAM%3E2.0.CO%3B2-0}
                   ,
-  file          = {seeger60:moods.pdf}
-                  ,
+  file          = {seeger60:moods.pdf},
   publisher     = {JSTOR}
 }
 
