--- a/artifical-inteligence.bib
+++ b/artifical-inteligence.bib
@@ -16,6 +16,16 @@
   year          = "1997"
 }
 
+@Book{            norvig92:paradigms,
+  author        = {Peter Norvig},
+  title         = {Paradigms of Artificial Intelligence Programming: Case
+                  Studies in Common Lisp},
+  year          = {1992},
+  isbn          = {1558601910},
+  publisher     = {Morgan Kaufmann Publishers Inc.},
+  address       = {San Francisco, CA, USA}
+}
+
 @Book{            russell.ea02:artificial,
   author        = {Stuart Russell and Peter Norvig},
   title         = {Artificial Intelligence: A Modern Approach},
@@ -23,12 +33,3 @@
   year          = 2002,
   edition       = {2nd}
 }
-
-@book{norvig92:paradigms,
- author = {Peter Norvig},
- title = {Paradigms of Artificial Intelligence Programming: Case Studies in Common Lisp},
- year = {1992},
- isbn = {1558601910},
- publisher = {Morgan Kaufmann Publishers Inc.},
- address = {San Francisco, CA, USA},
- }
