Correção em artigo

--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -82,10 +82,11 @@
 }
 
 @InProceedings{   kröger.ea06:processo,
-  author        = {Pedro Kröger and Marcos Sampaio and Givaldo de Cidra},
+  author        = {Pedro Kröger and Marcos Sampaio and {Givaldo de} Cidra},
   title         = {O processo de desenvolvimento de uma codificação para
                   definir estruturas musicais},
   booktitle     = {Anais do XVI Congresso da ANPPOM},
+  address       = {Brasília},
   year          = 2006
 }
 
