Remove caracteres acentuados das key

--- a/counterpoint.bib
+++ b/counterpoint.bib
@@ -1,5 +1,5 @@
 
-@Book{            bitsch.ea64:traité,
+@Book{            bitsch.ea64:traite,
   title         = {Traité de contrepoint},
   publisher     = {Durand},
   year          = {1964},
