--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -73,7 +73,7 @@
   file          = {cunha99-intelligent.pdf}
 }
 
-@TechReport{      jørgensen.ea02:harmonisation,
+@TechReport{      jorgensen.ea02:harmonisation,
   author        = {Martin Elmer Jørgensen and Søren Tjagvad Madsen},
   title         = {Harmonisation of Bach chorales},
   institution   = {University of Aarhus},
@@ -81,7 +81,7 @@
   file          = {harmreport.pdf}
 }
 
-@InProceedings{   kröger.ea06:processo,
+@InProceedings{   kroger.ea06:processo,
   author        = {Pedro Kröger and Marcos Sampaio and {Givaldo de} Cidra},
   title         = {O processo de desenvolvimento de uma codificação para
                   definir estruturas musicais},
