--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -77,7 +77,7 @@
   address       = {Warren, Mich.}
 }
 
-@Book{            lendvai71:béla,
+@Book{            lendvai71:bela,
   title         = {Béla Bartók: An Analysis of His Music},
   publisher     = {Kahn \& Averill},
   year          = {1971},
