--- a/music-and-maths.bib
+++ b/music-and-maths.bib
@@ -23,7 +23,7 @@
                   things in between.}
 }
 
-@Book{            livio06:razão,
+@Book{            livio06:razao,
   title         = {Razão áurea: a história de Fi, um número
                   surpreendente},
   publisher     = {Record},
