--- a/music-dictionary.bib
+++ b/music-dictionary.bib
@@ -1,5 +1,5 @@
 
-@Book{            griffiths95:enciclopédia,
+@Book{            griffiths95:enciclopedia,
   title         = {Enciclopédia da Música do Século XX},
   publisher     = {Martins Fontes},
   year          = {1995},
@@ -58,7 +58,7 @@
   edition       = {2. ed. rev. enl.}
 }
 
-@Book{            kennedy94:dicionário,
+@Book{            kennedy94:dicionario,
   title         = {Dicionário Oxford de Música},
   publisher     = {Don Quixote},
   year          = {1994},
