--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -154,7 +154,7 @@
   doi           = {10.2307/843533}
 }
 
-@Book{            koechlin46:traité,
+@Book{            koechlin46:traite,
   title         = {Traité de l'Harmonie},
   publisher     = {Max Eschig},
   year          = {1946},
@@ -254,7 +254,7 @@
   author        = {Rahn, J.}
 }
 
-@Book{            réti51:tematic,
+@Book{            reti51:tematic,
   author        = {Rudolph Réti},
   title         = {The tematic Process in music},
   publisher     = {MacMillan},
