--- a/music-history.bib
+++ b/music-history.bib
@@ -54,7 +54,7 @@
                   1911.}
 }
 
-@Book{            almeida42:história-da-música-brasileira,
+@Book{            almeida42:historia-da-musica-brasileira,
   title         = {{História da música brasileira}},
   author        = {Renato Almeida},
   year          = {1942},
@@ -120,7 +120,7 @@
   cdd           = {780.908 B878m}
 }
 
-@Book{            bukofzer86:música,
+@Book{            bukofzer86:musica,
   title         = {La música en la época barroca: de Monteverdi a Bach},
   publisher     = {Alianza Editorial},
   year          = {1986},
@@ -149,7 +149,7 @@
   address       = {New York}
 }
 
-@Book{            béhague79:music,
+@Book{            behague79:music,
   title         = {Music in Latin America, an introduction},
   publisher     = {Prentice-Hall},
   year          = {1979},
@@ -160,7 +160,7 @@
   edition       = {2 ed.}
 }
 
-@Book{            béhague83:música,
+@Book{            behague83:musica,
   title         = {La música en la America Latina: una introducción},
   publisher     = {Monte Avila Editores},
   year          = {1983},
@@ -170,7 +170,7 @@
   cdd           = {780.908 B419m}
 }
 
-@Book{            béhague.ea76:music,
+@Book{            behague.ea76:music,
   title         = {Music in the Renaissance},
   publisher     = {Prentice-Hall},
   year          = {1976},
@@ -307,7 +307,7 @@
                   science.}
 }
 
-@Book{            einstein85:música,
+@Book{            einstein85:musica,
   title         = {La música en la época romántica},
   publisher     = {Alianza Editorial},
   year          = {1985},
@@ -370,7 +370,7 @@
   cdd           = {780.9 N532 v10}
 }
 
-@Book{            grout.ea94:história,
+@Book{            grout.ea94:historia,
   title         = {História da Música Ocidental},
   publisher     = {Gradiva},
   year          = {1994},
@@ -500,7 +500,7 @@
   address       = {Englewood Cliffs, N.J.}
 }
 
-@Book{            mariz00:história,
+@Book{            mariz00:historia,
   title         = {História da música no Brasil},
   publisher     = {Editora Nova Fronteira},
   year          = {2000},
@@ -511,7 +511,7 @@
   isbn          = {85-209-1050-5}
 }
 
-@Book{            mariz94:história,
+@Book{            mariz94:historia,
   title         = {História da música no Brasil},
   publisher     = {Editora Nova Fronteira},
   year          = {1994},
@@ -551,7 +551,7 @@
                   cm.}
 }
 
-@Book{            mello08:música,
+@Book{            mello08:musica,
   title         = {A música no Brasil desde os tempos coloniaes até o
                   primeiro decênio da República},
   author        = {{Guilherme Teodoro Preira de} Mello},
@@ -643,7 +643,7 @@
   address       = {Graz}
 }
 
-@Book{            reese88:música,
+@Book{            reese88:musica,
   title         = {La música en la Edad Media},
   publisher     = {Alianza Editorial},
   year          = {1988},
@@ -703,7 +703,7 @@
   isbn          = {0-13-935015-2}
 }
 
-@Book{            salzman70:introdução,
+@Book{            salzman70:introducao,
   title         = {Introdução à Música do Século XX},
   publisher     = {Zahar},
   year          = {1970},
@@ -736,7 +736,7 @@
                   Toronto}
 }
 
-@Book{            subirá58:historia,
+@Book{            subira58:historia,
   title         = {Historia de la música},
   publisher     = {Salvat},
   year          = {1958},
@@ -789,7 +789,7 @@
   note          = {Translation of Die vier Weltalter der Musik}
 }
 
-@Book{            wörner73:history,
+@Book{            worner73:history,
   title         = {History of music; a book for study and reference},
   publisher     = {Free Press},
   year          = {1973},
