--- a/music-scores.bib
+++ b/music-scores.bib
@@ -9,7 +9,7 @@
   address       = {New York}
 }
 
-@Book{            bartók.ea97:concerto,
+@Book{            bartok.ea97:concerto,
   title         = {Concerto for orchestra = Concerto pour orchestre = Konzert
                   für Orchester},
   publisher     = {Boosey \& Hawkes},
