--- a/orchestration.bib
+++ b/orchestration.bib
@@ -135,7 +135,7 @@
   isbn          = {978-0130771612}
 }
 
-@Book{            koechlin56:traité,
+@Book{            koechlin56:traite,
   title         = {Traité de L'Orchestration},
   publisher     = {Max Eschig},
   year          = {1956},
