--- a/ismir.bib
+++ b/ismir.bib
@@ -2000,7 +2000,7 @@
   file          = {2006/PAPERS/ISMIR06138_Paper.pdf}
 }
 
-@InProceedings{   deliège.ea07:fuzzy,
+@InProceedings{   deliege.ea07:fuzzy,
   author        = {Deliège, François and Pedersen, Torben Bach},
   title         = {Fuzzy Song Sets for Music Warehouses},
   booktitle     = proc-ismir2007,
@@ -2644,7 +2644,7 @@
   file          = {2002/proceedings/03-SP03-3.pdf}
 }
 
-@InProceedings{   fernström.ea01:computer-supported,
+@InProceedings{   fernstrom.ea01:computer-supported,
   author        = {Fernström, Mikael and Ó Maidín, Donncha},
   title         = {Computer-supported Browsing for MIR},
   booktitle     = proc-ismir2001,
@@ -3432,7 +3432,7 @@
   file          = {2004/proceedings/p049-page-258-paper113.pdf}
 }
 
-@InProceedings{   gómez.ea07:analysis,
+@InProceedings{   gomez.ea07:analysis,
   author        = {Gómez, Carlos and Abad-Mota, Soraya and Ruckhaus, Edna},
   title         = {An Analysis of the Mongeau-Sankoff Algorithm for Music
                   Information Retrieval},
@@ -4677,7 +4677,7 @@
   file          = {2007/proceedings/ISMIR2007_p123_knopke.pdf}
 }
 
-@InProceedings{   kornstädt01:jring,
+@InProceedings{   kornstadt01:jring,
   author        = {Andreas Kornstädt},
   title         = {The JRing System for Computer-Assisted Musicological
                   Analysis},
@@ -4741,7 +4741,7 @@
   file          = {2004/proceedings/p063-page-345-paper219.pdf}
 }
 
-@InProceedings{   kröger04:csoundxml,
+@InProceedings{   kroger04:csoundxml,
   author        = {Pedro Kröger},
   title         = {CsoundXML: a meta-language in XML for sound synthesis},
   booktitle     = proc-ismir2004,
@@ -5316,7 +5316,7 @@
   file          = {2000/papers/lemstrom_paper.pdf}
 }
 
-@InProceedings{   lemström.ea01:three-layer,
+@InProceedings{   lemstrom.ea01:three-layer,
   author        = {Lemström, Kjell and Wiggins, Geraint A. and Meredith,
                   David},
   title         = {A Three-Layer Approach for Music Retrieval in Large
@@ -5806,7 +5806,7 @@
   file          = {2004/proceedings/p054-page-289-paper154.pdf}
 }
 
-@InProceedings{   lübbers05:sonixplorer,
+@InProceedings{   lubbers05:sonixplorer,
   author        = {Dominik Lübbers},
   title         = {SoniXplorer: Combining Visualization and Auralization for
                   Content-Based Exploration of Music Collections},
@@ -5887,7 +5887,7 @@
   file          = {2006/PAPERS/ISMIR06163_Paper.pdf}
 }
 
-@InProceedings{   maidín.ea01:score,
+@InProceedings{   maidin.ea01:score,
   author        = {Donncha S. Ó Maidín and Margaret Cahill},
   title         = {Score Processing For MIR},
   booktitle     = proc-ismir2001,
@@ -6576,7 +6576,7 @@
   file          = {2003/papers/Mulder.PDF}
 }
 
-@InProceedings{   muñoz-expósito.ea05:speechmusic,
+@InProceedings{   munoz-exposito.ea05:speechmusic,
   author        = {J.E. Muñoz-Expósito and S. Garcia-Galón and N.
                   Ruiz-Reyes and P. Vera-Candeas and F. Rivas-Peña},
   title         = {Speech/Music Discrimination Using a Single Warped
@@ -6593,7 +6593,7 @@
   file          = {2005/proceedings/2027.pdf}
 }
 
-@InProceedings{   mörchen.ea05:databionic,
+@InProceedings{   morchen.ea05:databionic,
   author        = {Fabian Mörchen and Alfred Ultsch and Mario Nöcker and
                   Christian Stamm},
   title         = {Databionic Visualization of Music Collections According to
@@ -6610,7 +6610,7 @@
   file          = {2005/proceedings/1051.pdf}
 }
 
-@InProceedings{   müllensiefen.ea04:optimizing,
+@InProceedings{   mullensiefen.ea04:optimizing,
   author        = {Daniel Müllensiefen and Klaus Frieler},
   title         = {Optimizing Measures Of Melodic Similarity For The
                   Exploration Of A Large Folk Song Database},
@@ -6626,7 +6626,7 @@
   file          = {2004/proceedings/p052-page-274-paper178.pdf}
 }
 
-@InProceedings{   müllensiefen.ea07:evaluating,
+@InProceedings{   mullensiefen.ea07:evaluating,
   author        = {Müllensiefen, Daniel and Lewis, David and Rhodes,
                   Christophe and Wiggins, Geraint A.},
   title         = {Evaluating a Chord-Labelling Algorithm},
@@ -6642,7 +6642,7 @@
   file          = {2007/proceedings/ISMIR2007_p317_mullensiefen.pdf}
 }
 
-@InProceedings{   müller.ea07:transposition-invariant,
+@InProceedings{   muller.ea07:transposition-invariant,
   author        = {Müller, Meinard and Clausen, Michael},
   title         = {Transposition-Invariant Self-Similarity Matrices},
   booktitle     = proc-ismir2007,
@@ -6657,7 +6657,7 @@
   file          = {2007/proceedings/ISMIR2007_p047_mullermuller.pdf}
 }
 
-@InProceedings{   müller.ea07:synchronization,
+@InProceedings{   muller.ea07:synchronization,
   author        = {Müller, Meinard and Dannenberg, Roger B.},
   title         = {Synchronization and Matching Techniques for Music Data},
   booktitle     = proc-ismir2007,
@@ -6672,7 +6672,7 @@
   file          = {2007/proceedings/ISMIR2007_tutorial_muller/index.html}
 }
 
-@InProceedings{   müller.ea04:towards,
+@InProceedings{   muller.ea04:towards,
   author        = {Meinard Müller and Frank Kurth and Tido Röder},
   title         = {Towards an Efficient Algorithm for Automatic
                   Score-to-Audio Synchronization},
@@ -7616,7 +7616,7 @@
   file          = {2005/proceedings/1007.pdf}
 }
 
-@InProceedings{   pienimäki02:indexing,
+@InProceedings{   pienimaki02:indexing,
   author        = {Anna Pienimäki},
   title         = {Indexing Music Databases Using Automatic Extraction of
                   Frequent Phrases},
@@ -7632,7 +7632,7 @@
   file          = {2002/proceedings/02-FP01-4.pdf}
 }
 
-@InProceedings{   pienimäki.ea04:clustering,
+@InProceedings{   pienimaki.ea04:clustering,
   author        = {Anna Pienimäki and Kjell Lemström},
   title         = {Clustering Symbolic Music Using Paradigmatic and Surface
                   Level Analyses},
@@ -7809,7 +7809,7 @@
   file          = {2002/proceedings/03-SP03-5.pdf}
 }
 
-@InProceedings{   ponce-de-león.ea07:towards,
+@InProceedings{   ponce-de-leon.ea07:towards,
   author        = {Ponce de León, Pedro J. and Rizo, David and Iñesta,
                   José M.},
   title         = {Towards a Human-Friendly Melody Characterization by
@@ -8318,7 +8318,7 @@
   file          = {2006/PAPERS/ISMIR06191_Paper.pdf}
 }
 
-@InProceedings{   ryynänen.ea06:transcription,
+@InProceedings{   ryynanen.ea06:transcription,
   author        = {Matti Ryynänen and Anssi Klapuri},
   title         = {Transcription of the Singing Voice in Polyphonic Music},
   booktitle     = proc-ismir2006,
@@ -8664,7 +8664,7 @@
   file          = {2003/}
 }
 
-@InProceedings{   seppänen.ea06:joint,
+@InProceedings{   seppanen.ea06:joint,
   author        = {Jarno Seppänen and A. Eronen and J. Hiipakka},
   title         = {Joint Beat and Tatum Tracking from Music Signals},
   booktitle     = proc-ismir2006,
@@ -8679,7 +8679,7 @@
   file          = {2006/PAPERS/ISMIR0683_Paper.pdf}
 }
 
-@InProceedings{   serrà07:qualitative,
+@InProceedings{   serra07:qualitative,
   author        = {Serrà, Joan},
   title         = {A Qualitative Assessment of Measures for the Evaluation of
                   a Cover Song Identification System},
