Livros de teoria pós-tonal e correções

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -238,6 +238,24 @@
   note          = {Trad. Luis Romano Haces}
 }
 
+@Book{            perle91:serial,
+  author        = {George Perle},
+  title         = {Serial Composition and Atonality: An Introduction to the
+                  Music of Schoenberg, Berg and Webern},
+  publisher     = {University of California Press},
+  year          = 1991,
+  address       = {Berkeley e Los Angeles},
+  edition       = {6 ed. rev.}
+}
+
+@Book{            perle77:twelve-tone,
+  author        = {George Perle},
+  title         = {Twelve-tone Tonality},
+  publisher     = {University of California Press},
+  year          = 1977,
+  address       = {Berkeley e Los Angeles}
+}
+
 @Book{            piston59:harmony,
   title         = {Harmony},
   publisher     = {Victon Gollancz Ltd},
@@ -248,10 +266,11 @@
 }
 
 @Book{            rahn80:basic,
+  author        = {John Rahn},
   title         = {Basic Atonal Theory},
   publisher     = {Longman},
-  year          = {1980},
-  author        = {Rahn, J.}
+  year          = 1980,
+  address       = {New York}
 }
 
 @Book{            reti51:tematic,
