--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -560,6 +560,17 @@
   publisher     = {JSTOR}
 }
 
+@Article{         teitelbaum65:intervallic,
+  title         = {Intervallic Relations in Atonal Music},
+  author        = {Richard Teitelbaum},
+  journal       = {Journal of Music Theory},
+  volume        = {9},
+  number        = {1},
+  pages         = {72--127},
+  year          = {1965},
+  publisher     = {Duke University Press}
+}
+
 @Article{         thiesen05:navegando,
   author        = {Roberto Thiesen},
   title         = {Navegando em Suave Mari Magno, Op. 97 de Ernst Widmer: uma
