Correção de publisher em artigos

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -11,7 +11,7 @@
                   ,
   doi           = {10.2307/851015},
   file          = {adams76:melodic.pdf},
-  publisher     = {JSTOR}
+  publisher     = {University of Illinois Press}
 }
 
 @PhDThesis{       beard03:contour,
@@ -164,7 +164,7 @@
                   ,
   doi           = {10.2307/843710},
   file          = {friedmann87:contour.pdf},
-  publisher     = {JSTOR}
+  publisher     = {Duke University Press}
 }
 
 @Article{         friedmann85:methodology,
@@ -543,7 +543,7 @@
                   ,
   doi           = {10.2307/850147},
   file          = {seeger69:formational.pdf},
-  publisher     = {JSTOR}
+  publisher     = {University of Illinois Press}
 }
 
 @Article{         seeger60:moods,
@@ -557,7 +557,7 @@
   annote        = {http://links.jstor.org/sici?sici=0003-0139(1960)13%3A1%2F3%3C224%3AOTMOAM%3E2.0.CO%3B2-0}
                   ,
   file          = {seeger60:moods.pdf},
-  publisher     = {JSTOR}
+  publisher     = {University of California Press}
 }
 
 @Article{         teitelbaum65:intervallic,
