--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -33,7 +33,7 @@
   volume        = {5},
   pages         = {72--94},
   number        = {1},
-  publisher     = {JSTOR}
+  publisher     = {Duke University Press}
 }
 
 @Article{         babbitt60:twelve-tone,
