Entrada Pearsall/Schaffer

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -369,6 +369,19 @@
   file          = {pearsall04:transformational.pdf}
 }
 
+@Article{         pearsall.ea05:shapeinterval,
+  author        = {Edward Pearsall and John Schaffer},
+  title         = {Shape/Interval Contours and Their Ordered Transformations:
+                  A Motivic Approach to the Aural Analysis of
+                  Twentieth-Century Music},
+  journal       = {College Music Symposium},
+  year          = 2005,
+  volume        = 45,
+  pages         = {57--80},
+  annote        = {\url{http://symposium.music.org/SupportingFiles/ArticlesVol45/Pearsall-Schaffer.htm}}
+                  
+}
+
 @Article{         polansky.ea92:possible,
   author        = {Larry Polansky and R. Bassein},
   title         = {Possible and Impossible Melody: some Formal Aspects of
