Novo artigo Morris

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -290,6 +290,17 @@
   file          = {marvin.ea87:relating.pdf}
 }
 
+@Article{         morris95:compositional,
+  author        = {Robert Morris},
+  title         = {Compositional Spaces and Other Territories},
+  journal       = {Perspectives of New Music},
+  year          = 1995,
+  volume        = 33,
+  number        = {1/2},
+  pages         = {328--358},
+  month         = {Winter - Summer}
+}
+
 @Article{         morris93:directions,
   author        = {Robert D. Morris},
   title         = {New Directions in the Theory and Analysis of Musical
