Artigo Teoria dos Conjuntos

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -47,6 +47,17 @@
   publisher     = {JSTOR}
 }
 
+@Article{         beach79:pitch,
+  author        = {David W. Beach},
+  title         = {Pitch Structure and the Analytic Process in Atonal Music:
+                  An Interpretation of the Theory of Sets},
+  journal       = {Music Theory Spectrum},
+  year          = 1979,
+  volume        = 1,
+  pages         = {7--22},
+  month         = {Spring}
+}
+
 @Misc{            bordini,
   author        = {Ricardo Bordini},
   title         = {Departamento de Composição, Literatura e Estruturação
