novas entradas, fix name

--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -1,3 +1,13 @@
+@ARTICLE{allen91:time,
+   KEYWORDS = {(TIME)},
+   PAGES = {341--355},
+   NUMBER = {4},
+   VOLUME = {6},
+   YEAR = {1991},
+   JOURNAL = {International Journal of Intelligent Systems},
+   TITLE = {Time and time again: the many ways to represent time},
+   AUTHOR = {James F. Allen },
+}
 
 @Book{            duda.ea00:pattern,
   author        = "Richard O. Duda and Peter E. Hart and David G. Stork",
