--- a/programs.bib
+++ b/programs.bib
@@ -1,3 +1,10 @@
+@MANUAL{stallman98:make,
+   YEAR = {1998},
+   ADDRESS = {Boston, MA},
+   ORGANIZATION = {Free Software Foundation},
+   AUTHOR = {Richard M. Stallman AND Roland Mcgrath },
+   TITLE = {GNU make: a program for directing recompilation},
+}
 
 @Misc{            baudis,
   author        = {Petr Baudis},
