--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -1,12 +1,13 @@
-@ARTICLE{allen91:time,
-   KEYWORDS = {(TIME)},
-   PAGES = {341--355},
-   NUMBER = {4},
-   VOLUME = {6},
-   YEAR = {1991},
-   JOURNAL = {International Journal of Intelligent Systems},
-   TITLE = {Time and time again: the many ways to represent time},
-   AUTHOR = {James F. Allen },
+
+@Article{         allen91:time,
+  keywords      = {(TIME)},
+  pages         = {341--355},
+  number        = {4},
+  volume        = {6},
+  year          = {1991},
+  journal       = {International Journal of Intelligent Systems},
+  title         = {Time and time again: the many ways to represent time},
+  author        = {James F. Allen}
 }
 
 @Book{            duda.ea00:pattern,
