--- a/programs.bib
+++ b/programs.bib
@@ -1,10 +1,3 @@
-@MANUAL{stallman98:make,
-   YEAR = {1998},
-   ADDRESS = {Boston, MA},
-   ORGANIZATION = {Free Software Foundation},
-   AUTHOR = {Richard M. Stallman AND Roland Mcgrath },
-   TITLE = {GNU make: a program for directing recompilation},
-}
 
 @Misc{            baudis,
   author        = {Petr Baudis},
@@ -60,6 +53,14 @@
   title         = {Lexer Package},
   howpublished  = {Available at
                   \url{www.geocities.com/mparker762/clawk.html#lexer}}
+}
+
+@Manual{          stallman.ea98:gnu,
+  year          = {1998},
+  address       = {Boston, MA},
+  organization  = {Free Software Foundation},
+  author        = {Richard M. Stallman and Roland Mcgrath},
+  title         = {GNU make: a program for directing recompilation}
 }
 
 @Misc{            team07:sbcl,
