Entrada - pcn de jamary

--- a/programs.bib
+++ b/programs.bib
@@ -48,6 +48,15 @@
                   \url{leenissen.dk/fann/html/files/fann-h.html}}
 }
 
+@Misc{            oliveira01:pcn,
+  author        = {Jamary Oliveira},
+  title         = {PCN --- Processador de Classes de Notas},
+  howpublished  = {Disponível em
+                  \url{http://www.angelfire.com/music2/bahia/pcn/pcn2001ptb.htm}}
+                  ,
+  year          = 2001
+}
+
 @Misc{            parker,
   author        = {Michael Parker},
   title         = {Lexer Package},
