Entrada: análise melódica funcional

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -300,6 +300,18 @@
   isbn          = {136866921}
 }
 
+@Book{            waesberghe55:textbook,
+  author        = {Joseph Smits van Waesberghe},
+  title         = {A Textbook of Melody: A Course in Functional Melodic
+                  Analysis},
+  publisher     = {American Institute of Musicology},
+  year          = 1955,
+  note          = {Trad. W.A.G. Doyle-Davidson},
+  annote        = {Disponível em
+                  \url{http://www.archive.org/details/textbookofmelody007516mbp}}
+                  
+}
+
 @Book{            wedge30:applied,
   title         = {Applied Harmony: A Text-book},
   publisher     = {G. Schirmer, Inc.},
