--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -352,3 +352,17 @@
   volume        = 12,
   pages         = {2--49}
 }
+
+@article{conklin06:melodic,
+ author = {Darrell Conklin},
+ title = {Melodic analysis with segment classes},
+ journal = {Machine Learning},
+ volume = {65},
+ number = {2-3},
+ year = {2006},
+ issn = {0885-6125},
+ pages = {349--360},
+ doi = {http://dx.doi.org/10.1007/s10994-006-8712-x},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ }
