usa pacote lastpage

--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -8,7 +8,7 @@
 
 \RequirePackage{url}
 %\RequirePackage{caption2}
-\RequirePackage{zref-lastpage}
+\RequirePackage{lastpage}
 \RequirePackage{br-chicago}
 \RequirePackage{fancyhdr}
 \RequirePackage{times}
