tira opção de babel (opção deve ser setada no documento)

--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -16,7 +16,7 @@
 \RequirePackage{titletoc}
 \RequirePackage{setspace}
 \RequirePackage[utf8,utf8x]{inputenc}
-\RequirePackage[brazil]{babel}
+\RequirePackage{babel}
 \RequirePackage{indentfirst}
 \usepackage{wasysym}
 \usepackage[font=it]{caption}
