Insere espaçamento do texto 1,5

--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -24,6 +24,7 @@
 \usepackage{subfigure}
 \usepackage{graphicx,url}
 \usepackage{indentfirst}
+\onehalfspacing
 
 %\renewcommand{\captionfont}{\small\itshape}
 
