--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -21,7 +21,7 @@
 \RequirePackage{indentfirst}
 \usepackage{wasysym}
 \usepackage[font=it]{caption}
-\usepackage{subfigure}
+\usepackage[FIGBOTCAP,TABBOTCAP]{subfigure}
 \usepackage{graphicx,url}
 \usepackage{indentfirst}
 \onehalfspacing
