usa pacote parskip

--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -18,6 +18,7 @@
 \RequirePackage[utf8,utf8x]{inputenc}
 \RequirePackage{babel}
 \RequirePackage{ifthen}
+\RequirePackage{parskip}
 \RequirePackage{indentfirst}
 \usepackage{wasysym}
 \usepackage[font=it]{caption}
