--- a/latex/anppom2008.sty
+++ b/latex/anppom2008.sty
@@ -14,6 +14,8 @@
 \RequirePackage{times}
 \RequirePackage{titlesec}
 \RequirePackage{titletoc}
+\usepackage{amsmath}
+\usepackage{color}
 \RequirePackage{setspace}
 \RequirePackage[utf8,utf8x]{inputenc}
 \RequirePackage{babel}
@@ -97,3 +99,12 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \renewcommand{\refname}{Referências Bibliográficas}
+
+\newcounter{notecounter}
+
+\newcommand{\note}[1]{
+  \addtocounter{notecounter}{1}
+  \textcolor{red}{[note \arabic{notecounter}: #1]}
+}
+
+\newcommand{\rameau}{\textit{Rameau}}
