Colocando itens do todo.

--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -11,6 +11,40 @@
   file          = {agawu04:how.pdf}
 }
 
+
+
+@Article{honing04:_comeb_of_system_music,
+  author =       {Henkjan Honing},
+  title =        {The comeback of systematic musicology: new empiricism and the cognitive revolution},
+  journal =      {Dutch Journal of Music Theory},
+  year =         2004,
+  volume =    9,
+  number =    3,
+  pages =     {241-244}}
+
+
+
+@InProceedings{coutinho05:conputational,
+  author =       {E. Gimenes Coutinho},
+  title =        {Computational Musicology: An Artificial Life Approach},
+  booktitle = {Proceedings of the 2nd Portuguese Workshop on Artificial Life and Evolutionary Algorithms Workshop},
+  pages =     {85-93},
+  year =      {2005},
+}
+
+@InProceedings{hartmann07:interactive,
+  author = {Knut Hartmann and Daniel B{\"u}chner and Axel Berndt and Andreas
+	N{\"u}rnberger and Carsten Lange},
+  title = {Interactive data mining and machine learning techniques for musicology},
+  booktitle = {3rd Conference on Interdisciplinary Musicology (CIM07)},
+  year = {2007},
+  address = {Tallinn, Estonia},
+  month = {15.-19. August},
+  owner = {schumann},
+  timestamp = {2007.10.25}
+}
+
+
 @Book{            bent.ea87:analysis,
   title         = {Analysis},
   publisher     = {Norton},
