--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -185,8 +185,7 @@
 
 @Book{            kostka.ea00:tonal,
   author        = {Stefan M. Kostka and Dorothy Payne},
-  title         = {Tonal Harmony, with an introduction to twentieth-century
-                  music},
+  title         = {Tonal Harmony, with an introduction to twentieth-century music},
   publisher     = {McGraw-Hill},
   year          = 2000,
   address       = {Boston},
