--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -13,7 +13,7 @@
 
 
 
-@Article{honing04:_comeb_of_system_music,
+@Article{honing04:comeback,
   author =       {Henkjan Honing},
   title =        {The comeback of systematic musicology: new empiricism and the cognitive revolution},
   journal =      {Dutch Journal of Music Theory},
