--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -45,6 +45,17 @@
 }
 
 
+
+@InProceedings{kranenburg04:_music_style_recog_quant_approac,
+  author =       {{Kranenburg, P. van, E. Backer}},
+  title =        {Musical style recognition - a
+quantitative approach},
+  booktitle = {Proceedings of the Conference on Interdisciplinary Musicology},
+  pages =     {15-18},
+  year =      2004,
+  editor =    {{R. Parncutt, A. Kessler & F. Zimmer}},
+  month =     {April}}
+
 @Book{            bent.ea87:analysis,
   title         = {Analysis},
   publisher     = {Norton},
